k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outbox-httproute
spec:
  parentRefs:
  - name: outbox-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /crawl
    backendRefs:
    - name: controller-svc
      port: 8080
